# file-ops

./: .gitignore  README.md  pyproject.toml  tox.ini
src/file_operations/: __init__.py  _chown_utils.py  _containerlike.py  _errors.py  _file_operations.py  _fileinfo.py  _pathlike.py  containerlike.py
src/file_ops/: __init__.py  _exceptions.py  _file_ops.py
tests/pebble/: test.py  test_containerlike.py  test_pathlike.py  utils.py
