[project]
name = "file-operations"
description = "Helpers for working with files in charms. `pip install file-operations` and `import file_operations`"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name="The Charm Tech team at Canonical Ltd.", email="charm-tech@lists.launchpad.net"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
]
dynamic = ["version"]
dependencies = [
    "typing_extensions",
    "ops>=2.17",
]

[project.urls]
#"Repository" = "https://github.com/#/#"
#"Issues" = "https://github.com/#/#/issues"

[build-system]
requires = [
    "setuptools>=60",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {file = ["src/file_ops/_version.txt"]}
